--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,6 @@
 	text-decoration:none;
 }
 .markItUp  {
-	width:700px;
 	margin:5px 0 5px 0;
 }
 .markItUpContainer  {
@@ -27,23 +26,12 @@
 	line-height:18px;
 	overflow:auto;
 }
-.markItUpPreviewFrame	{
-	overflow:auto;
-	background-color:#FFF;
-	width:99.9%;
-	height:300px;
-	margin:5px 0;
-}
+
 .markItUpFooter {
 	width:100%;
 }
 .markItUpResizeHandle {
-	overflow:hidden;
-	width:22px; height:5px;
-	margin-left:auto;
-	margin-right:auto;
-	background-image:url(images/handle.png);
-	cursor:n-resize;
+	display: none;
 }
 /***************************************************************************************/
 /* first row of buttons */
