--- a/assets/style.css
+++ b/assets/style.css
@@ -11,12 +11,7 @@
 	color:#000;
 	text-decoration:none;
 }
-.markItUp  {
-	margin:5px 0 5px 0;
-}
-.markItUpContainer  {
-	font:11px Verdana, Arial, Helvetica, sans-serif;
-}
+
 .markItUpEditor {
 	font:12px 'Courier New', Courier, monospace;
 	padding:5px;
@@ -32,6 +27,13 @@
 	display: none;
 }
 /***************************************************************************************/
+
+.markItUpHeader ul {
+	height: 25px;
+	line-height: 25px;
+	margin-bottom: 5px;
+}
+
 /* first row of buttons */
 .markItUpHeader ul li	{
 	list-style:none;
@@ -48,100 +50,71 @@
 .markItUpHeader ul .markItUpDropMenu li {
 	margin-right:0px;
 }
-/* next rows of buttons */
-.markItUpHeader ul ul {
-	display:none;
-	position:absolute;
-	top:18px; left:0px;	
-	background:#FFF;
-	border:1px solid #000;
+
+.markItUpHeader ul li.markItUpSeparator {
+	padding: 0 5px;
 }
-.markItUpHeader ul ul li {
-	float:none;
-	border-bottom:1px solid #000;
-}
-.markItUpHeader ul ul .markItUpDropMenu {
-	background:#FFF url(images/submenu.png) no-repeat 100% 50%;
-}
-.markItUpHeader ul .markItUpSeparator {
-	margin:0 10px;
-	width:1px;
-	height:16px;
-	overflow:hidden;
-	background-color:#CCC;
-}
-.markItUpHeader ul ul .markItUpSeparator {
-	width:auto; height:1px;
-	margin:0px;
-}
-/* next rows of buttons */
-.markItUpHeader ul ul ul {
-	position:absolute;
-	top:-1px; left:150px; 
-}
-.markItUpHeader ul ul ul li {
-	float:none;
-}
+
 .markItUpHeader ul a {
 	display:block;
-	width:16px; height:16px;
+	width:16px; height:25px;
 	text-indent:-10000px;
 	background-repeat:no-repeat;
-	padding:3px;
-	margin:0px;
-}
-.markItUpHeader ul ul a {
-	display:block;
-	padding-left:0px;
-	text-indent:0;
-	width:120px; 
-	padding:5px 5px 5px 25px;
-	background-position:2px 50%;
-}
-.markItUpHeader ul ul a:hover  {
-	color:#FFF;
-	background-color:#000;
+	background-position:center; 
+	padding: 0 3px;
 }
 
 /* -------------------------------------------------------------------
 // markItUp!
 // By Jay Salvat - http://markitup.jaysalvat.com/
 // ------------------------------------------------------------------*/
-
-.markdown .markItUpButton1 a {
+.markItUp .markItUpButton1 a {
+	background-image:url(images/h1.png); 
+}
+.markItUp .markItUpButton2 a {
+	background-image:url(images/h2.png); 
+}
+.markItUp .markItUpButton3 a {
 	background-image:url(images/h3.png); 
 }
-.markdown .markItUpButton2 a {
+.markItUp .markItUpButton4 a {
 	background-image:url(images/h4.png); 
 }
-.markdown .markItUpButton3 a {
+.markItUp .markItUpButton5 a {
 	background-image:url(images/h5.png); 
 }
-.markdown .markItUpButton4 a {
+.markItUp .markItUpButton6 a {
 	background-image:url(images/h6.png); 
 }
 
-.markdown .markItUpButton5 a {
+.markItUp .markItUpButton7 a {
 	background-image:url(images/bold.png);
 }
-.markdown .markItUpButton6 a {
+.markItUp .markItUpButton8 a {
 	background-image:url(images/italic.png);
 }
 
-.markdown .markItUpButton7 a {
+.markItUp .markItUpButton9 a {
 	background-image:url(images/list-bullet.png);
 }
-.markdown .markItUpButton8 a {
+.markItUp .markItUpButton10 a {
 	background-image:url(images/list-numeric.png);
 }
 
-.markdown .markItUpButton9 a {
+.markItUp .markItUpButton11 a {
 	background-image:url(images/picture.png); 
 }
-.markdown .markItUpButton10 a {
+.markItUp .markItUpButton12 a {
 	background-image:url(images/link.png);
 }
 
-.markdown .markItUpButton11 a	{
+.markItUp .markItUpButton13 a	{
 	background-image:url(images/quotes.png);
+}
+.markItUp .markItUpButton14 a	{
+	background-image:url(images/code.png);
+}
+
+.markItUp .preview a {
+	background-image:url(images/preview.png);
 }
